# umba-fx-engine

./: .env.example  .gitignore  AGENTS.md  DECISIONS.md  README.md  REVIEW.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py  schemas.py
app/api/routes/: __init__.py  customers.py  executions.py  health.py  quotes.py  rates.py
app/api/schemas/: __init__.py  base.py  customers.py  executions.py  health.py  quotes.py  rates.py
app/configs/: constants.py
app/core/: config.py  constants.py  errors.py  money.py  observability.py
app/db/: models.py  session.py
app/middleware/: request_id.py
app/repositories/: balances.py  ledger.py  rates.py
app/services/: customers.py  executions.py  quotes.py  rates.py
app/utils/: errors.py  money.py  observability.py
tests/: conftest.py
tests/integration/: test_api_contract.py  test_log_correlation.py
tests/unit/: helpers.py  test_api_errors.py  test_executions.py  test_immutability.py  test_ledger.py  test_money.py  test_observability.py  test_quotes.py  test_rates_and_routing.py
