[project]
name = "fx-takehome"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "prometheus-client>=0.20.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.32",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.112.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
